# crm

./: Cargo.toml  README.md  cliff.toml  deny.toml
crm/: Cargo.toml
crm/src/: client.rs
crm/src/pb/: crm.rs
protos/: crm.proto
user-stat/: .env  Cargo.toml
user-stat/examples/: gen.rs
user-stat/migrations/: 20240926013552_init.sql
