[workspace]
members = ["crm", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
tonic = { version = "0.12.2", features = ["zstd", "tls"] }
tonic-build = "0.12.2"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
