[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = "0.8.5"

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "2.10.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
